<resources>
    <string name="app_name">MyLittleAssistent</string>
    <string name="set_food_button">Go!</string>
    <string name="standard_button_height">30</string>
    <string name="nameOfFood">Product</string>
    <string name="calories">Calories</string>
    <string name="weightOfFood">Weight</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="add_product">Add product</string>
</resources>
