<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/setFoodName"
        android:layout_width="188dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="600dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/calcCaloriesBtn"
        android:layout_width="42dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/set_food_button"
        android:onClick="calculateCalories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/setWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setWeight"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/calcCaloriesBtn"
        app:layout_constraintStart_toEndOf="@+id/setFoodName"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:text="@string/nameOfFood"
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text="@string/weightOfFood"
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text="@string/protein"
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text="@string/fat"
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text="@string/carbohydrates"
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text="@string/calories"
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/firstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/secondLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/thirdLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>

            <TextView
                android:text=""
                android:textStyle="italic"
                android:layout_weight="10"
                android:layout_gravity="center_horizontal">
            </TextView>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>